5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1636_2449.log
== TEST (2019-04-17 13:55:23) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else:	
x =((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))




-- ERROR:
File "XXXX", line 10
    x =((c*e)-(b*f))/((a*e)-(b*d))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:56:50) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x y

print(mensagem)




-- ERROR:
File "XXXX", line 13
    mensagem = x y
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:56:56) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x, y

print(mensagem)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:57:40) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x, y

print(mensagem)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:02) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x, y

print(mensagem)




-- EXECUTION TIME:
0.205947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:13) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x y

print(mensagem)




-- EXECUTION TIME:
0.166786
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    mensagem = x y
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:58:19) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x
	           y

print(mensagem)




-- ERROR:
File "XXXX", line 14
    y
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:58:25) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x y

print(mensagem)




-- ERROR:
File "XXXX", line 13
    mensagem = x y
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:58:31) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = (x y)

print(mensagem)




-- ERROR:
File "XXXX", line 13
    mensagem = (x y)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:58:42) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x,y

print(mensagem)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:43) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x,y

print(mensagem)




-- EXECUTION TIME:
0.214864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:44) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x,y

print(mensagem)




-- EXECUTION TIME:
0.121132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:44) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x,y

print(mensagem)




-- EXECUTION TIME:
0.0935509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:45) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x,y

print(mensagem)




-- EXECUTION TIME:
0.154331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:58:45) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	mensagem = x,y

print(mensagem)




-- EXECUTION TIME:
0.158684
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
(-0.15705128205128205, 1.1618589743589745)
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(-0.22641509433962265, 1.528301886792453)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(-0.15705128205128205, 1.1618589743589745)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:59:41) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	 print(x)
	print(y)

print(mensagem)




-- EXECUTION TIME:
0.163081
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 14
    print(y)
           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:59:42) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
	mensagem = "Nao tem solucao"
else: 
	 print(x)
	print(y)

print(mensagem)




-- EXECUTION TIME:
0.197498
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 14
    print(y)
           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:00:06) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")"
else: 
	 print(x)
	print(y)

print("Nao tem solucao")




-- ERROR:
File "XXXX", line 11
    print("Nao tem solucao")"
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:00:08) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")"
else: 
	 print(x)
	print(y)

print("Nao tem solucao")




-- EXECUTION TIME:
0.129207
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 11
    print("Nao tem solucao")"
                            ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:00:12) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	 print(x)
	print(y)

print("Nao tem solucao")




-- ERROR:
File "XXXX", line 14
    print(y)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:00:17) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)

print("Nao tem solucao")




-- EXECUTION TIME:
0.187383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:00:18) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)

print("Nao tem solucao")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:00:50) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.130706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:00:51) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.149618
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:00:52) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:01:01) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:01:12) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:01:13) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.173662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:01:56) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.165787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:01:56) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.155849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:01:56) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.143398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:01:59) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:03:04) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.134826
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:03:53) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.201929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:04:20) 
-- CODE:
a = int(input("valor de a:"))
b = int(input("valor de b:"))
c = int(input("valor de c:"))
d = int(input("valor de d:"))
e = int(input("valor de e:"))
f = int(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.132259
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:04:21) 
-- CODE:
a = int(input("valor de a:"))
b = int(input("valor de b:"))
c = int(input("valor de c:"))
d = int(input("valor de d:"))
e = int(input("valor de e:"))
f = int(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- EXECUTION TIME:
0.198336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:05:20) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:05:46) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:05:52) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:06:38) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))

if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	print(x)
	print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:37) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.10157
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:37) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.122051
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:37) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.1423
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:38) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.177205
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:07:38) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:38) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.263248
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:39) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.360186
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:39) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.560556
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:39) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.648641
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:39) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.641693
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:39) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.090266
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:40) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.169646
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:45) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.169816
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 14
    print(x)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:07:46) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 14
    print(x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:46) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.293361
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 14
    print(x)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:07:57) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.150515
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:07:58) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:07:59) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:08:00) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:08:00) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:08:00) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:08:01) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- ERROR:
File "XXXX", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:01) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.140224
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:02) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.14841
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:02) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.109521
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:02) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.134479
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:02) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.198185
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:03) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.210645
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:03) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.209281
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:03) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.148974
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:03) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.248523
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.179078
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.505586
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.548267
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.627299
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.701289
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:08:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b:"))
c = float(input("valor de c:"))
d = float(input("valor de d:"))
e = float(input("valor de e:"))
f = float(input("valor de f:"))


if((a*e)-(b*d) == 0): 
    print("Nao tem solucao")
else: 
	x = ((c*e)-(b*f))/((a*e)-(b*d))
   y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)






-- EXECUTION TIME:
0.796067
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 13
    y = ((a*f)-(c*d))/((a*e)-(b*d))
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
